# wasp-launcher

./: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: release.yml  version.yml
src/: app.css  app.d.ts  app.html  error.html
src-tauri/: Cargo.toml  imgui.ini  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  server.rs  simba.rs
src-tauri/src/client/: linux.rs  mod.rs  windows.rs
src/lib/: communication.svelte.ts  communication.ts  markdown.ts  store.ts  supabase.ts  utils.ts
src/lib/components/: Discord.svelte  ExecuteButton.svelte  LinkButton.svelte  Logo.svelte  RoleBadge.svelte  ScriptStage.svelte
src/lib/types/: collection.ts  supabase.ts  update.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  Footer.svelte  Login.svelte  Navigation.svelte  Sidebar.svelte
src/routes/(app)/: +layout.svelte  +layout.ts  +page.ts  Footer.svelte  Navigation.svelte  Sidebar.svelte
src/routes/(app)/Footer/: Discord.svelte  GitHub.svelte  YouTube.svelte
src/routes/(app)/Navigation/: Lightswitch.svelte
src/routes/(app)/running/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(app)/running/[slug]/: +layout.ts  +page.svelte
src/routes/(app)/scripts/: +layout.svelte  +layout.ts
src/routes/(app)/scripts/[slug]/: +page.svelte  ScriptHeader.svelte
src/routes/(app)/settings/: +layout.svelte  +page.ts
src/routes/(app)/settings/development/: +page.svelte
src/routes/(auth)/auth/: +page.svelte  +page.ts
src/routes/Footer/: GitHub.svelte
src/routes/Navigation/: GitHub.svelte  Lightswitch.svelte  Logo.svelte  Navigation.svelte  ThemeSwitcher.svelte
src/routes/auth/: +page.svelte  +page.ts  Logo.svelte
src/routes/scripts/: +layout.svelte  +layout.ts
src/routes/scripts/[slug]/: +page.svelte  +page.ts  ScriptHeader.svelte
src/routes/settings/: +layout.svelte  +page.svelte  +page.ts
src/routes/settings/development/: +page.svelte
src/routes/settings/general/: +page.svelte  +page.ts
src/routes/settings/information/: +page.ts
(+2 files in other folders)
